--- a/Assignment1.html
+++ b/Assignment1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./project1.css">
+    <link rel="stylesheet" href="./Assignment1.css">
 </head>
 <body>
     <h1 class="redheading">This is 1st CSS Assignment</h1>
