--- a/Assignment1.html
+++ b/Assignment1.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 1</title>
     <link rel="stylesheet" href="./Assignment1.css">
+    <link rel="icon" href="./favicon.jfpg">
 </head>
 <body>
     <h1 class="redheading">This is 1st CSS Assignment</h1>
