--- a/Assignment1.html
+++ b/Assignment1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="./Assignment1.css">
-    <link rel="icon" href="./favicon.jfpg">
+    <link rel="icon" href="./favicon.jfif">
 </head>
 <body>
     <h1 class="redheading">This is 1st CSS Assignment</h1>
